--- a/index.html
+++ b/index.html
@@ -5,8 +5,199 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
 </head>
 <body>
+    <div class="page1">
+    <nav>
+        <h2>Ultahost</h2>
+        <div>
+            <p>Domain</p>
+            <p>Hosting</p>
+            <p>Tool & Services</p>
+            <p>Support</p>
+            <p>Affiliate</p>
+        </div>
+        <h3>CLIENT AREA</h3>
+    </nav>
+    <hr>
+    <div class="content">
+    <div class="left">
+        <span>UP TO 20X FASTER, CHEAP WEB HOSTING</span>
+        <h1>Powerful, Best Shared Hosting</h1>
+        <p>Extremely fast, secure and user-friendly website hosting for <br> your successful online projects, get up to a 20x faster page <br> load times, With unlimited bandwidth and a free cPanel license.</p>
+        <button class="started">GET STARTED</button>
+        <button class="work"><i class="ri-play-circle-fill">How Ultahost Work</i></button> <br>
+        <img src="https://c.stocksy.com/a/XJC000/z9/47339.jpg" alt="">
+        <img src="https://i.pinimg.com/originals/e3/7e/0e/e37e0e25686c2139b281a57a5b4906f2.jpg" alt="">
+        <img src="https://images.squarespace-cdn.com/content/v1/61be23f48bb8db20176fea91/8056d5f0-9580-4860-a932-c995f602de48/Franke_headshot.jpg" alt="">
+        <img src="https://casting-callback.s3.eu-west-1.amazonaws.com/candidate/17431/27678_cropped_thumb.jpg" alt="">
+        <h6>People rated Ultahost</h6>
+        <h5><i class="ri-star-s-fill"></i><i class="ri-star-s-fill"></i><i class="ri-star-s-fill"></i><i class="ri-star-s-fill"></i><i class="ri-star-s-fill"></i></h5>
+    </div>
+    <div class="middle">
+        <div class="card">
+            <div class="top">
+                <h3>Basic Shared Hosting</h3>
+                <p>Easy, fast, and flexible compute built for a range of needs along with user-friendly hosting.</p>
+            </div>
+            <div class="content">
+                    <img src="Screenshot_27-9-2024_235437_ultahost.com-removebg-preview.png" alt="">
+                    <h3>Ultahost</h3>
+                    <span>₹275.43/mo</span>
+            </div>
+        </div>
+    </div>
+    <div class="right">
+        <img src="https://ultahost.com/themes/default/images/webp/banner-image.webp" alt="">
+    </div>
+    </div>
+</div>
+<div class="page2">
+    <h2>Web Hosting Plans That Are Ultrafast And Secure</h2>
+    <p>Our platform is truly unique. We've got you covered with both managed and self- <br> managed hosting.</p>
+    <div class="pricingcard">
+    <div class="pricingcardd">
+        <h3>SHARED STARTER</h3>
+        <h4>The ideal starting point into shared hosting!</h4>
+        <h1>₹318.13/mo</h1>
+        <span>Save 40%</span>
+        <h6>Billed for 24 month term.</h6>
+        <button>Buy Now</button>
+        <h5>Features</h5>
+        <p><i class="ri-check-line"></i> <strong>1</strong> Domain</p>
+        <p><i class="ri-check-line"></i> <strong>~ 10,000</strong> Visit Monthly</p>
+        <p><i class="ri-check-line"></i> <strong>30 GB </strong> NVMe SSD</p>
+        <p><i class="ri-check-line"></i> <strong>Unlimited</strong> Bandwidth</p>
+        <p><i class="ri-check-line"></i> <strong>Free</strong> Backup </p>
+        <p><i class="ri-check-line"></i> <strong>Free</strong> Domain Transfer </p>
+        <p><i class="ri-check-line"></i> <strong>Free</strong> SSL Certificate(s)</p>
+        <p><i class="ri-check-line"></i> <strong>Free</strong> 30-Days <strong>Money-Back</strong></p>
+    </div>
+    <div class="pricingcardd">
+        <h3>VIP BASIC</h3>
+        <h4>The ideal starting point into vps hosting!</h4>
+        <h1>₹401.85/mo</h1>
+        <span>Save 40%</span>
+        <h6>Billed for 24 month term.</h6>
+        <button>Buy Now</button>
+        <h5>Features</h5>
+        <p><i class="ri-check-line"></i> <strong>1</strong> CPU covered</p>
+        <p><i class="ri-check-line"></i> <strong>1 GB</strong> RAM DDR5</p>
+        <p><i class="ri-check-line"></i> <strong>30 GB </strong> NVMe SSD</p>
+        <p><i class="ri-check-line"></i>  Managed Server</p>
+        <p><i class="ri-check-line"></i> <strong>1 IPv4 </strong> Dedicated IP </p>
+        <p><i class="ri-check-line"></i> <strong>4 IPv6</strong> Dedicated IP </p>
+        <p><i class="ri-check-line"></i> <strong>Free</strong> SSL Certificate(s)</p>
+        <p><i class="ri-check-line"></i> <strong>Free</strong> 30-Days <strong>Money-Back</strong></p>
+    </div>
+    <div class="pricingcardd">
+        <h3>POWER PLUS</h3>
+        <h4>Excellent plan, Go for this plan for an impressive kick off!</h4>
+        <h1>₹2,745.97/mo</h1>
+        <span>Save 40%</span>
+        <h6>Billed for 24 month term.</h6>
+        <button>Buy Now</button>
+        <h5>Features</h5>
+        <p><i class="ri-check-line"></i> <strong>4</strong> CPU covered</p>
+        <p><i class="ri-check-line"></i> <strong>8 GB</strong> RAM DDR5</p>
+        <p><i class="ri-check-line"></i> <strong>250 GB </strong> NVMe SSD</p>
+        <p><i class="ri-check-line"></i>  Managed Server</p>
+        <p><i class="ri-check-line"></i> <strong>Unlimited</strong> Bandwidth </p>
+        <p><i class="ri-check-line"></i> <strong>1 IPv4</strong> Dedicated IP </p>
+        <p><i class="ri-check-line"></i> <strong>Free</strong> SSL Certificate(s)</p>
+        <p><i class="ri-check-line"></i> DDOS Protection</p>
+    </div>
+    <div class="pricingcardd">
+        <h3>ULTA-X1</h3>
+        <h4>The ideal starting point into dedicated hosting!</h4>
+        <h1>₹6,262.15/mo</h1>
+        <span>Save 40%</span>
+        <h6>Billed for 24 month term.</h6>
+        <button>Buy Now</button>
+        <h5>Features</h5>
+        <p><i class="ri-check-line"></i> CPU - 4 Cores / 8 Threads</p>
+        <p><i class="ri-check-line"></i> Intel® Xeon E3 / Core i7</p>
+        <p><i class="ri-check-line"></i> 1x <strong>480 GB </strong> SSD</p>
+        <p><i class="ri-check-line"></i>  <strong>16 GB</strong> RAM DDR5</p>
+        <p><i class="ri-check-line"></i> IP Addresses - 1 IPv4 </p>
+        <p><i class="ri-check-line"></i> Managed Server </p>
+        <p><i class="ri-check-line"></i> <strong>Unlimited</strong> Bandwidth</p>
+        <p><i class="ri-check-line"></i> <strong>Free</strong> Domain Transfer</p>
+    </div>
+    </div>
+</div>
+<div class="page3">
+    <div class="left">
+        <h2>Free Migration</h2>
+        <p>Want to transfer your existing server to UltaHost? It’s simple and it’s free. With zero additional charges to set up or install your Operating System (OS), you won’t find hidden costs with us.</p>
+        <h2>Increase traffic and sales</h2>
+        <p>Feel extra secure thanks to a private peering network, Under Complete Server Management, our technicians will routinely monitor to check for any server issues.</p>
+    <h2>Guaranteed Dedicated Resources</h2>
+    <p>Each server has been allocated its own resources, with no overselling or sharing of CPU, RAM or any other system resources.</p>
+    </div>
     
+    <div class="right">
+        <h2>Solid State Drives (NVMe SSDs)</h2>
+        <p>With NVMe SSDs, your website, caching, and database queries are faster (around 4-7x faster than Normal SATA SSDs by our calculations). Experience less lag, faster data transfer rates, smoother gameplay, and more.</p>
+        <h2>Money Back Guarantee</h2>
+        <p>While we are sure you’ll love our web hosting services, we know sometimes you can’t evaluate the caliber until you try it. With us, you get the flexibility to cancel the plan within 30 days.</p>
+        <h2>Perfect Uptime</h2>
+        <p>We know the availability of your website is your primary concern and so is ours. Our Tier-3 and Tier-4 data centers enables us to provide you the best uptime</p>
+    </div>
+</div>
+<div class="page4">
+    <div class="left">
+        <h3>WordPress. We love it</h3>
+        <p>Best Managed Hosting for WordPress That Guarantees Success</p>
+        <p>We offer the best ecommerce hosting services to ensure that your hosting experience is top-notch. with advanced caching technologies, for an optimized store and better conversion rate. Our feature-rich platform offers a solid foundation powered by ultahost next generation web servers.</p>
+        <p>Pick the best CRM tool for you, and let our technical expert do the rest.</p>
+        <button>Explore Wordpress Hosting</button>
+    </div>
+    <div class="right">
+        <img src="https://ultahost.com/themes/default/images/blockpartimg/wordpress-hosting.svg" alt="">
+    </div>
+</div>
+<footer>
+    <div>
+        <h2>QUICK LINKS</h2>
+        <p>USA, VPS</p>
+        <p>Europe, Germany VPS</p>
+        <p>Canada, Toronto VPS</p>
+        <p>Asia, India VPS</p>
+    </div>
+    <div>
+        <h2>MOST POPULAR</h2>
+        <p>PHP Hosting</p>
+        <p>Linux Hosting</p>
+        <p>Node.Js Hosting</p>
+        <p>CyberPanel Hosting</p>
+    </div>
+    <div>
+        <h2>TUTORIALS</h2>
+        <p>All Tutorials</p>
+        <p>WordPress Tutorials</p>
+        <p>Domain Tutorials</p>
+        <p>SEO Tutorials</p>
+        <p>How-To Tutorials</p>
+        <p>Hosting Video Tutorials</p>
+    </div>
+    <div>
+        <h2>COMPARE</h2>
+        <p>Bluehost vs. UltaHost</p>
+        <p>DreamHost vs. UltaHost</p>
+        <p>Contabo vs. UltaHost</p>
+        <p>Godaddy vs. UltaHost</p>
+        <p>SiteGround vs. UltaHost</p>
+        <p>Compare more</p>
+    </div>
+    <div>
+        <i class="ri-facebook-fill"></i> <i class="ri-twitter-x-line"></i> <i class="ri-instagram-line"></i> <i class="ri-linkedin-fill"></i>
+    </div>
+</footer>
+
 </body>
 </html>
